--- a/Synthetic/data.yaml
+++ b/Synthetic/data.yaml
@@ -1,6 +1,6 @@
-train: C:\Users\Luis Carlos Ramos\Personal\tec-artificial-vision-for-parts-inspection\Synthetic\test\images
-val: C:\Users\Luis Carlos Ramos\Personal\tec-artificial-vision-for-parts-inspection\Synthetic\train\images
-test: C:\Users\Luis Carlos Ramos\Personal\tec-artificial-vision-for-parts-inspection\Synthetic\valid\images
+train: C:\Users\Luis Carlos Ramos\Personal\tec-artificial-vision-for-parts-inspection\Synthetic\train\images
+val: C:\Users\Luis Carlos Ramos\Personal\tec-artificial-vision-for-parts-inspection\Synthetic\valid\images
+test: C:\Users\Luis Carlos Ramos\Personal\tec-artificial-vision-for-parts-inspection\Synthetic\test\images
 
 nc: 4
 names: ['Pieza1', 'Pieza2', 'Pieza3', 'Pieza4']
